plugins {
    id 'java'
    id 'org.springframework.boot' version '2.2.6.RELEASE'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'idea'
    id 'eclipse'
    id 'io.franzbecker.gradle-lombok' version '3.1.0'
    id "se.thinkcode.cucumber-runner" version "0.0.8"
}

apply from: rootProject.file('gradle/source-sets.gradle')
apply from: rootProject.file('gradle/configuration.gradle')
apply from: rootProject.file('gradle/dependencies.gradle')
apply from: rootProject.file('gradle/wrapper.gradle')

ext {
    joptSimpleVersion = '4.6'
}

group 'edp'
version '1.0'
sourceCompatibility = 1.8

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.fork = true
}

cucumber {
    threads = System.getProperty("threads.number")
}

bootRun {
    systemProperties = System.properties
}
